# teacher

./: .env.example  .gitignore  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/db/app/: atlas.hcl
backend/docker/: atlas.Dockerfile  docker-compose.local.yml
backend/docker/db/init/: 001_timezone.sql  002_create_database.sql
backend/files/dataset/: wikipedia_Deep_learning.md  wikipedia_MLOps.md  wikipedia_Retrieval-augmented_generation.md  wikipedia_大規模言語モデル.md
backend/src/apps/api/schemas/: __init__.py
backend/src/apps/ingest/: main.py
backend/src/tests/: test_package_imports.py
backend/src/tests/apps/api/: test_main.py
backend/src/tests/apps/api/routers/: test_ask.py
backend/src/tests/apps/ingest/: test_main.py
backend/src/tests/apps/wikipedia_to_markdown/: test_main.py
db/app_db/: atlas.hcl
db/app_db/schema/tables/: chunks.hcl  documents.hcl
docker/: Dockerfile  docker-compose.local.yml  local.Dockerfile
docker/db/init/: 003_create_test_database.sql
files/dataset/: wikipedia_Embedding.md  wikipedia_Large_language_model.md
frontend/: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
frontend/docker/: docker-compose.local.yml  local.Dockerfile
src/apps/api/: main.py
src/apps/api/routers/: ask.py
src/apps/api/schemas/: schemas.py
src/apps/wikipedia_to_markdown/: main.py
src/tests/: conftest.py
src/tests/apps/api/routers/: test_health.py
src/tests/apps/api/schemas/: test_schemas.py
