[project]
name = "teacher"
version = "0.1.0"
dependencies = [
    "beautifulsoup4==4.12.3",
    "fastapi==0.116.1",
    "html2text==2020.1.16",
    "numpy==2.3.2",
    "openai==1.99.9",
    "pgvector==0.4.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]==3.2.9",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "requests==2.31.0",
    "sqlalchemy==2.0.43",
    "tiktoken==0.11.0",
    "uvicorn[standard]==0.35.0",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # organize import
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["apps.api.*", "packages.core.*"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "debugpy==1.8.1",
    "fastapi==0.116.1",
    "html2text==2020.1.16",
    "mypy==1.18.2",
    "numpy==2.3.2",
    "openai==1.99.9",
    "pgvector==0.4.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]==3.2.9",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "requests==2.31.0",
    "ruff==0.13.0",
    "sqlalchemy==2.0.43",
    "tiktoken==0.11.0",
    "types-requests==2.31.0.20240406",
    "uvicorn[standard]==0.35.0",
]
